--- a/client/src/css/Court.css
+++ b/client/src/css/Court.css
@@ -1,15 +1,33 @@
+
+
+/* Chat gpt styling */
+:root {
+  --main-primary-color: #333;
+  --secondary-color: #777;
+}
+
+
+
+.courtContainer {
+  display: flex;
+  flex-direction: row;
+  padding: 1rem;
+  justify-content:space-evenly;
+  max-width: 100vw;
+}
+
+.court p {
+  margin: 1rem;
+  padding: 0;
+  font-size: 1rem;
+}
+
 .court input {
   border: none;
   border-radius: 0.3rem;
   text-align: center;
   width: 2rem;
   height: 2rem;
-}
-
-/* Chat gpt styling */
-:root {
-  --main-primary-color: #333;
-  --secondary-color: #777;
 }
 .court {
   color: var(--main-text-color);
@@ -29,13 +47,6 @@
   min-height: 22rem;
   text-align: center;
 }
-
-.court p {
-  margin: 1rem;
-  padding: 0;
-  font-size: 1rem;
-}
-
 form {
   display: flex;
   flex-direction: column;
