--- a/client/src/css/Footer.css
+++ b/client/src/css/Footer.css
@@ -1,13 +1,11 @@
 .mainFooter {
     font-size: .5em;
     color: var(--secondary-bg-color);
-    width: 100vw;
+    width: 100%;
     background-color: var(--main-bg-color);
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 5ch 0;
     margin-top: 5rem;
-    position: sticky;
-    top: 100vh;
 }
